[package]
name = "prototype_web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
tokio = {version = "1.36.0", features = ["full"]}
futures = "0.3.30"
mysql = "24.0.0"
serde = { version = "1.0.197", features = ["derive"] }
itertools = "0.12.1"
rand = "0.8.5"